--- a/main.html
+++ b/main.html
@@ -1,43 +1,36 @@
 <!DOCTYPE html>
-
 <html lang="en">
-
 <head>
-	<meta charset="UTF 8">
-	<meta name="viewport" content="width-device-width,initial scale=1.0">
-	<title>Block or Inline</title>
-	<style>
-		.block{
-			display:block;
-			}
-		.inline{
-			display:inline;
-		}
-	</style>
-	<link rel="stylesheet" href="styles.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Block vs Inline Elements</title>
+<style>
+  .block {
+    display: block;
+  }
+  .inline {
+    display: inline;
+  }
+</style>
 </head>
-
 <body>
-	<div class="block">
-		<button data-ns-test="block-initial-button">Test1</button>
-		<button data-ns-test="block-initial-button">Test2</button>
-	</div>
-<div class="block">
-		<div data-ns-test="block-initial-div">Test1</div>
-		<div data-ns-test="block-initial-div">Test2</div>
-	</div>
-	<div class="block">
-		<p data-ns-test="block-initial-p">Test1</p>
-		<p data-ns-test="block-initial-p">Test2</p>
-	</div>
-	<div class="block">
-		<h1 data-ns-test="block-initial-h1">Test1</h1>
-		<h1 data-ns-test="block-initial-h1">Test2</h1>
-	</div>
-
-
-	
-	<div class="inline">
+  <div class="block">
+    <button data-ns-test="block-inline-button">Test1</button>
+    <button data-ns-test="block-inline-button">Test2</button>
+  </div>
+  <div class="block">
+    <div data-ns-test="block-inline-div">Test1</div>
+    <div data-ns-test="block-inline-div">Test2</div>
+  </div>
+  <div class="block">
+    <p data-ns-test="block-inline-p">Test1</p>
+    <p data-ns-test="block-inline-p">Test2</p>
+  </div>
+  <div class="block">
+    <h1 data-ns-test="block-inline-h1">Test1</h1>
+    <h1 data-ns-test="block-inline-h1">Test2</h1>
+  </div>
+  <div class="inline">
     <span data-ns-test="block-inline-span">Test1</span>
     <span data-ns-test="block-inline-span">Test2</span>
   </div>
@@ -61,10 +54,5 @@
     <sub data-ns-test="block-inline-sub">Test1</sub>
     <sub data-ns-test="block-inline-sub">Test2</sub>
   </div>
-
-    <script type="text/javascript" src="./script.js">
-</script>
-
 </body>
-
 </html>
