--- a/main.html
+++ b/main.html
@@ -19,5 +19,10 @@
     <button data-ns-test="block-inline-button">Test2</button>
     Answer: Inline
 </div>
+	<div>
+    <div data-ns-test="block-inline-div">Test1</div>
+    <div data-ns-test="block-inline-div">Test2</div>
+    Answer: Inline
+</div>
 </body>
 </html>
