--- a/main.html
+++ b/main.html
@@ -22,7 +22,7 @@
 	<div>
     <div data-ns-test="block-inline-div">Test1</div>
     <div data-ns-test="block-inline-div">Test2</div>
-    Answer: Inline
+    Answer: Block
 </div>
 </body>
 </html>
